виправлення помилок в index

--- a/index.html
+++ b/index.html
@@ -56,31 +56,31 @@
         </div>
       </section>
 
-      <section class="quality">
+      <section class="features section">
         <div class="container">
           <h2 class="second-title visually-hidden">Особенности компании WebStudio</h2>
           <ul class="list">
-            <li class="quality-item">
+            <li class="features-item">
               <h3 class="third-title">Внимание к деталям</h3>
-              <p class="quality-text">
+              <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="quality-item">
+            <li class="features-item">
               <h3 class="third-title">Пунктуальность</h3>
-              <p class="quality-text">
+              <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="quality-item">
+            <li class="features-item">
               <h3 class="third-title">Планирование</h3>
-              <p class="quality-text">
+              <p class="features-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="quality-item">
+            <li class="features-item">
               <h3 class="third-title">Современные технологии</h3>
-              <p class="quality-text">
+              <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
@@ -88,7 +88,7 @@
         </div>
       </section>
 
-      <section class="hobbies section">
+      <section class="hobbies">
         <div class="container">
           <h2 class="hobbies-title">Чем мы занимаемся</h2>
           <ul class="list">
@@ -177,7 +177,7 @@
         <a class="logo" href="/index.html" lang="en" aria-label="Логотип сайта WebStudio"
           >Web<span class="logo-white-color">Studio</span></a
         >
-        <address class="footer">
+        <address class="address-footer">
           <ul class="list">
             <li class="footer-item">
               <a
