виправляє помилку line-height: 1.14px;

--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
           <h2 class="second-title visually-hidden">Особенности компании WebStudio</h2>
           <ul class="list">
             <li class="features-item">
-              <h3 class="third-title">Внимание к деталям</h3>
+              <h3 class="features-third-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="features-item">
-              <h3 class="third-title">Пунктуальность</h3>
+              <h3 class="features-third-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="features-item">
-              <h3 class="third-title">Планирование</h3>
+              <h3 class="features-third-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="features-item">
-              <h3 class="third-title">Современные технологии</h3>
+              <h3 class="features-third-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
