виправляє помилки від ментора

--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-third-title">Игорь Демьяненко</h3>
-              <p class="team-text" lang="en">Product Designer</p>
+              <div class="team-items">
+                <h3 class="team-third-title">Игорь Демьяненко</h3>
+                <p class="team-text" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -143,8 +145,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-third-title">Ольга Репина</h3>
-              <p class="team-text" lang="en">Frontend Developer</p>
+              <div class="team-items">
+                <h3 class="team-third-title">Ольга Репина</h3>
+                <p class="team-text" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -154,8 +158,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-third-title">Николай Тарасов</h3>
-              <p class="team-text" lang="en">Marketing</p>
+              <div class="team-items">
+                <h3 class="team-third-title">Николай Тарасов</h3>
+                <p class="team-text" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -165,8 +171,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-third-title">Михаил Ермаков</h3>
-              <p class="team-text" lang="en">UI Designer</p>
+              <div class="team-items">
+                <h3 class="team-third-title">Михаил Ермаков</h3>
+                <p class="team-text" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
