добавляє картинку в hero

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </header>
     <main>
       <section class="hero">
+        <!-- <div class="thumb"><img src="./images/business.jpg" alt="" /></div> -->
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-button" type="button">Заказать услугу</button>
